correct font-size collapse

--- a/src/pages/About.scss
+++ b/src/pages/About.scss
@@ -40,7 +40,7 @@
 			padding: 22px 15px;
 			pointer-events: none;
             font-family: montserrat;
-            font-size: 16px;
+            font-size: 14px;
 		}
 	}
 }
